make some changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Authentication Section -->
   <div id="auth-section">
     <h1>Recipe Organizer</h1>
-    <button id="bio-auth-btn">Login with Biometrics</button>
+    <button id="bio-register-btn">Register Biometrics</button>
     <p id="auth-message" role="alert"></p>
   </div>
 
