make some changes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <div id="auth-section">
     <h1>Recipe Organizer</h1>
     <button id="bio-register-btn">Register Biometrics</button>
+    <button id="bio-auth-btn">Login with Biometrics</button>
+
+    <div id="bio-feedback"></div>
+
     <p id="auth-message" role="alert"></p>
   </div>
 
